# Anvesha

./: .gitignore  anvesha-smoke.db  repoa-example.db
anvesha-frontend/: README.md  app.js  index.html  package.json  server.js  styles.css
anvesha-otel/: README.md  pyproject.toml
anvesha-otel/src/anvesha/otel/: __init__.py  otel.py  settings.py
anvesha-server/: README.md  pyproject.toml
anvesha-server/src/anvesha_server/: config.py  main.py
anvesha-server/src/anvesha_server/api/: __init__.py  common.py  models.py  projects.py  spans.py  traces.py
anvesha-server/src/anvesha_server/db/: __init__.py  engine.py  models.py
anvesha-server/src/anvesha_server/otel/: __init__.py  attributes.py  decoder.py  schemas.py
anvesha-server/src/anvesha_server/services/: __init__.py  insert_span.py
extracted-core/: README-EXTRACTION.txt
